# webp-android

./: README.md  RELEASE_CHECKLIST.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: publish.yml
example/: build.gradle  build.gradle.kts  proguard-rules.pro
example/src/androidTest/java/com/aureusapps/android/: ExampleInstrumentedTest.kt
example/src/androidTest/java/com/aureusapps/webpandroid/: ExampleInstrumentedTest.kt
example/src/main/: AndroidManifest.xml
example/src/main/java/com/aureusapps/android/: MainActivity.kt
example/src/main/java/com/aureusapps/webpandroid/: MainActivity.kt
example/src/main/java/com/aureusapps/webpandroid/example/: MainActivity.kt
example/src/main/res/layout/: activity_main.xml
example/src/main/res/values/: strings.xml  themes.xml
example/src/main/res/values-night/: themes.xml
example/src/test/java/com/aureusapps/android/: ExampleUnitTest.kt
example/src/test/java/com/aureusapps/webpandroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: publish-module.gradle  update-version.gradle
webp-android/: build.gradle  build.gradle.kts  consumer-rules.pro
webp-android-simple/: build.gradle  build.gradle.kts
webp-android/src/main/: AndroidManifest.xml
webp-android/src/main/cpp/: CMakeLists.txt  bitmap_operations.cpp  bitmap_utils.cpp  decoder.cpp  encoder.cpp  encoder_helper.cpp  error_codes.cpp  exception_helper.cpp  file_utils.cpp  native_helper.cpp  native_loader.cpp  result_codes.cpp  string_formatter.cpp  type_helper.cpp  webp_anim_decoder.cpp  webp_anim_encoder.cpp  webp_decoder.cpp  webp_decoder_helper.cpp  webp_encoder.cpp  webp_encoder_helper.cpp  webp_info_decoder.cpp
webp-android/src/main/cpp/include/: bitmap_operations.h  bitmap_utils.h  encoder_helper.h  error_codes.h  exception_helper.h  file_utils.h  native_helper.h  native_loader.h  result_codes.h  string_formatter.h  type_helper.h  webp_anim_decoder.h  webp_anim_encoder.h  webp_decoder.h  webp_decoder_helper.h  webp_encoder.h  webp_encoder_helper.h  webp_info_decoder.h
webp-android/src/main/cpp/includes/: decoder.h  encoder.h
webp-codec/: CMakeLists.txt  build.gradle
webp-codec/src/androidTest/java/com/aureusapps/webpcodec/: ExampleInstrumentedTest.kt
webp-codec/src/main/: AndroidManifest.xml
webp-codec/src/main/cpp/: decoder.cpp  encoder.cpp
webp-codec/src/main/cpp/include/: encoder.h
webp-codec/src/main/cpp/includes/: decoder.h  encoder.h  helper.h
webp-codec/src/main/java/com/aureusapps/webpcodec/decoder/: WebPAnimDecoder.kt  WebPAnimDecoderListener.kt  WebPAnimDecoderOptions.kt
webp-codec/src/main/java/com/aureusapps/webpcodec/encoder/: WebPAnimEncoder.kt  WebPAnimEncoderListener.kt  WebPAnimEncoderOptions.kt  WebPConfig.kt  WebPFrame.kt  WebPMuxAnimParams.kt  WebPPreset.kt
webp-codec/src/test/java/com/aureusapps/webpcodec/: ExampleUnitTest.kt
(+108 files in other folders)
